--- a/docs/styles/print.css
+++ b/docs/styles/print.css
@@ -2,7 +2,7 @@
   size: 99mm 210mm;
   padding: 0.5em;
   counter-increment: page;
-  font-family: "Songti TC", serif;
+  font-family: "Source Han Serif TW", "Source Han Serif TC", serif;
   font-size: 8pt;
   border: 1pt solid black;
 }
@@ -12,7 +12,6 @@
   @left-top {
     writing-mode: vertical-rl;
     margin: 0 .575em 0 .925em;
-    font-family: "Source Han Serif TC", serif;
   }
   @left-bottom {
     writing-mode: vertical-rl;
@@ -26,7 +25,6 @@
   @right-top {
     writing-mode: vertical-lr;
     margin: 0 .925em 0 .575em;
-    font-family: "Source Han Serif TC", serif;
   }
   @right-bottom {
     writing-mode: vertical-lr;
