--- a/docs/styles/screen.css
+++ b/docs/styles/screen.css
@@ -165,7 +165,7 @@ hgroup.gray.book.title, footer {
 
 /* Web font fallback for mobile devices, from Google Font Early Access */
 @font-face {
-   font-family: 'Noto Sans CJK';
+   font-family: 'Noto Sans TC';
    font-style: normal;
    font-weight: 400;
    src: url(//fonts.gstatic.com/ea/notosanstc/v1/NotoSansTC-Regular.woff2) format('woff2'),
@@ -173,7 +173,7 @@ hgroup.gray.book.title, footer {
         url(//fonts.gstatic.com/ea/notosanstc/v1/NotoSansTC-Regular.otf) format('opentype');
  }
 @font-face {
-   font-family: 'Noto Sans CJK';
+   font-family: 'Noto Sans TC';
    font-style: normal;
    font-weight: 500;
    src: url(//fonts.gstatic.com/ea/notosanstc/v1/NotoSansTC-Medium.woff2) format('woff2'),
@@ -181,7 +181,7 @@ hgroup.gray.book.title, footer {
         url(//fonts.gstatic.com/ea/notosanstc/v1/NotoSansTC-Medium.otf) format('opentype');
  }
 @font-face {
-   font-family: 'Noto Sans CJK';
+   font-family: 'Noto Sans TC';
    font-style: normal;
    font-weight: 700;
    src: url(//fonts.gstatic.com/ea/notosanstc/v1/NotoSansTC-Bold.woff2) format('woff2'),
