--- a/docs/styles/common.css
+++ b/docs/styles/common.css
@@ -270,7 +270,7 @@ p:not(.footnote) + .footnote {
 
 .book.title {
   font-family: "Source Han Sans TC", "Noto Sans TC", sans-serif;
-  font-size: 1.75rem;
+  font-size: 1.85rem;
   font-weight: 600;
   line-height: 2.0625rem;
   text-align: left;
@@ -279,7 +279,7 @@ p:not(.footnote) + .footnote {
 
 .book.title .secondary {
   display: block;
-  font-size: .875rem;
+  font-size: 1.25rem; /* National Central Library requires this */
   line-height: 1.375rem;
 }
 
